--- a/custom-css/VIANNA.css
+++ b/custom-css/VIANNA.css
@@ -78,6 +78,11 @@ body {
   border: none;
 }
 
+/* The horizontal line */
+hr {
+  border-top: 1px solid #C5BFB6;
+}
+
 /* Text block, often used in Markdown */
 pre {
     background-color: #f8f5f1;
