VIANNA.css: Main text justified

--- a/custom-css/VIANNA.css
+++ b/custom-css/VIANNA.css
@@ -95,6 +95,9 @@ ul {
   padding-left: 20px;
 }
 
+/* Main text justified */
+.entry-content p {
+  text-align: justify;
 }
 
 .image-bg-fluid-height,
