--- a/custom-css/VIANNA.css
+++ b/custom-css/VIANNA.css
@@ -158,7 +158,7 @@ h6,
 .entry-title,
 .page-header {
     font-size: 3em;
-    margin: 30px 0 0;
+    margin: 30px 0 10px;
     border-bottom: none;
 }
 
