underline links in dark-gray not red

--- a/custom-css/VIANNA.css
+++ b/custom-css/VIANNA.css
@@ -32,7 +32,7 @@ body {
 
 /* Links in the main content area */
 .entry-content a, .entry-content a:hover {
-  border-color: #F03C14;
+  border-color: #AAA;
 }
 
 /* The top bar with the menu */
