lists have more space to bottom

--- a/custom-css/VIANNA.css
+++ b/custom-css/VIANNA.css
@@ -95,6 +95,7 @@ pre {
 /* Indentation of lists */
 ul {
   padding-left: 20px;
+  padding-bottom: 10px;
 }
 
 /* Adjusting the sizes of the smaller headings ... */
