--- a/custom-css/vianna.css
+++ b/custom-css/vianna.css
@@ -148,6 +148,12 @@ h6,
     margin: 0 auto;
 }
 
+.center img {        
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
+
 .panel-body {
   padding: 5px;
 }
